# codebase-gardener

./: .env.example  .gitignore  .pre-commit-config.yaml  .session_log  AGENTS.md  CAPABILITY_REPORT.md  CLAUDE.md  CLEANUP_CHANGES_LOG.md  CONTRIBUTING.md  ENHANCED_CROTCHETY_AUDITOR_SUMMARY.md  GIT_ALIGN_REPORT.md  HOW_TO_RUN.md  LICENSE  README.md  TEST_EXECUTION_REPORT.md  TEST_PLAN.md  TEST_PLAN_MVP.md  TODO.md  codebase-gardener-analysis.md  codebase_audit_report.md  codebase_auditor.py  crotchety_code_auditor.py  current_packages.txt  debug_file_discovery.py  dependency-audit-report.md  final-demo.md  final-validation.md  mvp_scope.py  mvp_scope_command.sh  mvp_scope_config.json  mvp_scope_report.md  notion-schema-tool-analysis.md  outdated-packages.json  performance_metrics.json  project-analysis.md  pyproject.toml  real-codebase-analysis.md  requirements-min.txt  requirements.txt  security-audit.json  (+18 more)
.claude/commands/: code-review.md  dependency-audit.md  log.md  mvp-scope.md  readme-refresh.md  scaffold-minimal.md  security-review.md  test-plan.md  tidy-config.md  todo-sweep.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
.kiro/archive/: README.md
.kiro/archive/scripts/: performance_metrics.json  simple_codebase_chat.py  test_comprehensive_system_validation.py  test_enhanced_main_integration.py  test_operational_monitoring_integration.py  test_performance_integration.py  test_performance_optimization.py
.kiro/docs/: README.md  api-reference.md  architecture-overview.md  cli-reference.md  configuration-guide.md  development-setup.md  documentation-index.md  documentation-update-procedures.md  gap-closure-criteria.md  operations-guide.md  performance-guide.md  production-deployment-guide.md  system-audit-report.md  task_completion_test_log.md  testing-guidelines.md  troubleshooting.md
.kiro/docs/components/: file-utilities.md
.kiro/docs/templates/: api-documentation-template.md  component-documentation-template.md  memory-file-template.md  pre-task-review-template.md
.kiro/gap-analysis/: task4-critical-issues.md
.kiro/memory/: .gitkeep  advanced_features_controller_task3 2.md  chat_interface_task3.md  code_quality_improvements_2025_08_17.md  component_reactivation_task2 2.md  component_registry_task12.md  config_logging_task2.md  critical_fixes_task1.md  directory_setup_task3.md  documentation_audit_task2.md  documentation_task5.md  dynamic_loader_task13_pre_review.md  dynamic_model_loader_task13.md  enhance_main_application_task18.md  error_handling_task4.md  file_utilities_task17.md  gradio_web_interface_task16.md  integration_testing_task19.md  lancedb_storage_task8.md  lancedb_storage_task8_pre_review.md  lora_training_task12.md  lora_training_task12_pre_review.md  nomic_embeddings_task7.md  ollama_client_task9.md  ollama_client_task9_pre_review.md  operational_readiness_task5.md  peft_manager_task10.md  peft_manager_task10_pre_review.md  performance_optimization_task4.md  preprocessing_task6.md  production_deployment_task3.md  project_context_manager_task14.md  project_registry_task11.md  project_registry_task11_pre_review.md  project_setup_task1.md  project_vector_stores_task15.md  sample_validation_task0.md  single_file_auditor_task2.md  system_audit_task1.md  task4_enhanced_cli_interface 2.md  (+10 more)
.kiro/performance/benchmarks/: baselines.json  history.json
.kiro/specs/codebase-gardener-mvp/: requirements.md  (+1 more)
.kiro/steering/: Task Guidelines.md  ai-ml-architecture-context.md  codebase-gardener-principles.md  core-development-principles.md  development-best-practices.md  task-execution-framework.md
cleanup_backup_20250817_041253/: test_basic_file_discovery 2.py  test_cli_interface.py  test_simple_auditor 2.py
deployment/: DEPLOYMENT_CHECKLIST.md
deployment/backup/: restore.sh
deployment/config/: production.env
deployment/monitoring/: health_check.sh
deployment_DISABLED/: install.sh
deployment_DISABLED/backup/: backup.sh
deployment_DISABLED/services/: com.codebase-gardener.app.plist  com.codebase-gardener.ollama.plist
docs/: setup-guide.md
scripts/: audit_cleanup.py  maintain_documentation.py  setup_integration_test.py  smoke_cli.py  test_embedding_system.py  validate_documentation.py
scripts_DISABLED/: maintain_documentation.py  setup_integration_test.py  validate_documentation.py
src/codebase_gardener/: __init__.py  main.py  main_complex_DISABLED.py
src/codebase_gardener_DISABLED/: __init__.py  main.py  main_complex_DISABLED.py
tasks/: TASK_TEMPLATE 2.md
tests/: test_cli_commands.py  test_file_discovery_edge_cases.py  test_integration_workflows.py  test_project_structure.py  test_single_file_auditor.py
tests/core/: test_enhanced_analysis_integration.py
tests/data/: test_embeddings_integration.py  test_rag_engine.py
tests/integration/: test_end_to_end_pipeline 2.py  test_end_to_end_pipeline.py  test_end_to_end_system.py
tests/performance/: test_performance_benchmarks.py
tests/test_config/: __init__.py  test_logging_config.py  test_settings.py
tests/test_core/: test_dynamic_model_loader.py  test_project_context_manager.py  test_project_registry.py  test_training_pipeline.py
tests/test_data/: __init__.py  test_parser.py  test_preprocessor.py  test_project_vector_store.py  test_vector_store.py
tests/test_models/: test_nomic_embedder.py  test_ollama_client.py  test_ollama_client_simple.py  test_peft_manager.py
tests/test_ui/: test_gradio_app.py  test_project_selector.py
tests/test_utils/: test_directory_setup.py  test_error_handling.py  test_file_utils.py
(+87 files in other folders)
